# a2a-settlement

./: .gitignore  Dockerfile  Dockerfile.shim  README.md  SPEC.md  docker-compose.yml  environment.yml  openapi.yaml  pyproject.toml  requirements-shim.txt
.github/workflows/: publish-sdk.yml
docs/: economic-air-gap.md
examples/: air_gap_demo.py  quickstart.py
exchange/: app.py  auth.py  compliance_log.py  config.py  models.py  schemas.py  tasks.py
exchange/routes/: dashboard.py  settlement.py  stats.py
sdk/: README.md  pyproject.toml
sdk-ts/src/: client.ts  index.ts  types.ts
sdk/a2a_settlement/: client.py  types.py
shim/: __init__.py  app.py  config.py  cost_model.py  credential_injector.py  escrow_gate.py  models.py  proxy.py  tool_registry.py
shim/tests/: test_shim.py
simulation/: __init__.py  report.py  runner.py  scorer.py
simulation/agents/: __init__.py
simulation/agents/adversarial/: fake_endpoint_citer.py  github_fabricator.py  plausible_hallucinator.py
simulation/agents/honest/: dataset_summarizer.py  github_retriever.py  web_extractor.py
simulation/scenarios/: code_review.yaml  data_retrieval.yaml  document_summary.yaml
tests/: test_deliver.py
