[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "a2a-settlement"
version = "0.9.0"
description = "Escrow-based payment settlement for the A2A protocol"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
keywords = ["a2a", "settlement", "escrow", "agent", "payment"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Software Development :: Libraries",
]
dependencies = [
  "httpx>=0.27",
]

[project.urls]
Homepage = "https://github.com/a2a-settlement/a2a-settlement"
Repository = "https://github.com/a2a-settlement/a2a-settlement"
Documentation = "https://github.com/a2a-settlement/a2a-settlement/tree/main/docs"
Issues = "https://github.com/a2a-settlement/a2a-settlement/issues"

[project.optional-dependencies]
examples = [
  "a2a-sdk[http-server]>=0.3",
]
identity = [
  "PyNaCl>=1.5.0",
  "base58>=2.1.0",
]
dev = [
  "pytest>=7.0",
]

[tool.setuptools]
packages = ["a2a_settlement"]

